VUZE CHANGELOG
-----------------

2008.0x.xx | Vuze 3.1.1.1

FEATURE: UI   | Added "Column Setup" icon to the iconbar [amc1] 

CHANGE: Core  | Improved handling of mixed IPv4 and IPv6 bindings [The 8472]
CHANGE: UI    | The comment icon column now displays a blank icon if there is no comment (rather than no icon) [amc1]
CHANGE: Plug  | Client ID plugin is removed [amc1]

BUGFIX: Core  | Fixed DND deleting files in single-file torrents [The 8472]
BUGFIX: Core  | Fixed occasional deadlocks on startup under linux [The 8472]

2008.07.01 | Vuze 3.1.1.0

FEATURE: Core | Added Auto Starting rule to seed large swarms first; useful when many overseeded torrents are in the queue or the upload capacity is far above average [The 8472]
FEATURE: UIv3 | Friend Chat (double click on friend icon to chat) [Gudy]
FEATURE: UIv3 | Friends Online Status
FEATURE: UIv3 | Ability to share content from your computer by dragging it to a Friend [Gudy]

CHANGE: Core  | Built-in plugins can now be disabled - it didn't work properly in earlier versions [amc1]
CHANGE: UI    | Create Vivaldi views for each DHT in use [Groundy]
CHANGE: UI    | Added support for rotation in Vivaldi view [Groundy]
CHANGE: UI    | Peers view hostname column now sorts host names by the most significant part first [The 8472] 
CHANGE: UIv3  | Finished fixes for the new styled dialog which are now default in Vuze/Vuze Advanced [knguyen]
CHANGE: UIv3  | Added friend icon next to activity entry [TuxPaper]
CHANGE: UIv3  | New plugin bar look (removed arrows, added selectable list all plugin bar views) [TuxPaper]

BUGFIX: Core  | Fixed bug which stopped downloads being stored in the chosen directory [amc1]
BUGFIX: Core  | Fixed bug which prevented torrent files from being moved properly [amc1]
BUGFIX: Core  | Reopening torrents does not delete files when setting some of the already existing files to DND anymore [The 8472]