@@ -2997,4 +2997,6 @@ ConfigView.section.connection.advanced.write_select_min=Write select minimum wai
 DetailedListView.title=Detailed List
 ConfigView.section.connection.network.max.outstanding.connect.attempts=Max outstanding outbound connections
 
+plugins.init.force_enabled=Vuze has detected the plugin "%1" was disabled - it has been re-enabled to allow Vuze to work properly.
+
 #PLEASE LEAVE ME AT VERY BOTTOM!
